--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,9 @@ dependencies:
   google_fonts: ^2.1.0
   intl: ^0.17.0
   provider: ^6.0.1
+  smooth_page_indicator: ^1.0.0+2
   uuid: ^3.0.5
+  webview_flutter: ^2.1.1
 
 dev_dependencies:
   flutter_lints: ^1.0.0
@@ -52,7 +54,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
+    - assets/
+    - assets/food_pics/
+    - assets/magazine_pics/
+    - assets/sample_data/
+    - assets/profile_pics/
+    - assets/fooderlich_assets/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
